--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,46 @@
+vulkan-tools (1.3.282.0~rc1-1lunarg20.04-1) focal; urgency=medium
+
+  [ Richard S. Wright Jr. ]
+  * apple: Updated builds of cube and cubepp based on new MoltenVK known good
+  * apple: Updated copyright dates
+
+  [ Charles Giessen ]
+  * vulkaninfo: Add quotes around NULL
+  * ci: Disable Address Sanitizer in actions runs
+
+  [ Gareth Webb ]
+  * vulkaninfo: Add minImageCount/maxImageCount to VK_EXT_surface_maintenance1 information
+
+  [ Shahbaz Youssefi ]
+  * Fix VULKAN_HPP_TYPESAFE_CONVERSION define
+
+  [ spencer-lunarg ]
+  * icd: Add special fault injection logic
+  * icd: Fix DEVICE_LOST injection null check
+
+  [ Charles Giessen ]
+  * vulkaninfo: Don't print HostImageCopyProperites in Profiles
+
+  [ Julian Orth ]
+  * cube: Poll wayland socket each iteration
+
+  [ Gareth Webb ]
+  * vkcube: Thread safe event polling
+
+  [ Artem Kharytoniuk ]
+  * icd: Add external memory properties
+
+  [ Mike Schuchardt ]
+  * build: Remove old Android shaders
+
+  [ Alex Rønne Petersen ]
+  * Fix update_deps.py script to handle Windows Arm64.
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.282
+
+ -- john <john@odin>  Mon, 22 Apr 2024 16:37:34 -0600
+
 vulkan-tools (1.3.280.0~rc4-1lunarg20.04-1) focal; urgency=medium
 
   [ Charles Giessen ]
